[package]
name = "lm04-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
poem = "3.1.11"
poem-openapi = { version = "5.1.15", features = ["chrono", "swagger-ui"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
